--- a/book/style.css
+++ b/book/style.css
@@ -260,6 +260,31 @@ header {
     }
 }
 
+.main1 {
+
+
+.main1-header {
+    h2 {
+        width: 574px;
+        color: rgba(27, 55, 100, 1);
+        font-weight: 700;
+    }
+}
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
 /*-------------------------------------------------------------------------------------- */
 
 
@@ -440,6 +465,7 @@ header {
 
 
 }
+
 
 
 @media (max-width: 1400px) {
