--- a/book/style.css
+++ b/book/style.css
@@ -308,6 +308,24 @@ header {
         padding-top: 38px;
         gap: 17px;
 
+        .main1-button {
+            border:  2px solid rgba(255, 202, 66, 1);
+            background-color: white;
+            width: 140px;
+            text-align: center;
+            transition: 0.8s all ease;
+            padding: 10px 20px;
+            a {
+                color: rgba(27, 55, 100, 1);
+            }
+        }
+
+        .main1-button:hover {
+            background-color: rgba(255, 202, 66, 1) ;
+            border: 1px solid rgba(255, 202, 66, 1);
+            transform: rotate(1);
+        }
+
 
         .main1-dots {
             display: flex;
@@ -351,6 +369,8 @@ header {
                     margin-top: 8px;
                 }
             }
+
+
         }
 
       
@@ -367,6 +387,24 @@ header {
 
         img {
             width: 295px;
+        }
+
+        .main1-button {
+            border:  2px solid rgba(255, 202, 66, 1);
+            background-color: white;
+            transition: 0.8s all ease;
+            width: 140px;
+            text-align: center;
+            padding: 10px 20px;
+            a {
+                color: rgba(27, 55, 100, 1);
+            }
+        }
+
+        .main1-button:hover {
+            background-color: rgba(255, 202, 66, 1) ;
+            border: 1px solid rgba(255, 202, 66, 1);
+            transform: rotate(1);
         }
 
 
