--- a/book/style.css
+++ b/book/style.css
@@ -262,11 +262,13 @@ header {
 
 .main1 {
 
+    padding-bottom: 30px;
 
 .main1-header {
     padding-top: 60px;
+    padding-bottom: 50px;
     margin: auto;
-    width: 500px;
+    width: 420px;
 
     h2 {
        
@@ -275,6 +277,25 @@ header {
         font-size: 40px;
        
     }
+
+    }
+
+}
+
+
+.main1-header::after {
+    content: '';
+    display: block;
+    width: 0%;
+    height: 4px;
+    border-radius: 20px;
+    transition: 0.4s;
+    margin-top: 5px;
+    margin-inline: auto;
+    background-color: rgba(122, 156, 165, 1);
+}
+.main1-header:hover::after {
+    width: 90%;
 
 }
 
@@ -302,10 +323,11 @@ header {
     }
 
 
+
+
     .main1-box1 {
         display: flex;
         align-items: center;
-        padding-top: 38px;
         gap: 17px;
 
         .main1-button {
@@ -385,9 +407,7 @@ header {
         gap:38px;
 
 
-        img {
-            width: 295px;
-        }
+
 
         .main1-button {
             border:  2px solid rgba(255, 202, 66, 1);
@@ -465,8 +485,6 @@ header {
 }
 
 
-
-}
 
 
 
